# UavRay

./: .gitignore  README.md  pyproject.toml
configs/: train_dqn_config.yaml  train_qlambda_config.yaml
custom_models/: om_model.py
data/: astar_actor.py  astar_collect.py
envs/: __init__.py  uav_env_v7.py
envs/wrappers/: action_wrapper.py  offline_data_wrapper.py
model/: cnn_qnet_model.py  conv_encoder.py  d3qn_model.py  deep_q_net.py  model_constructor.py  uav_encoder.py
model/modules/: conv_encoder.py  deep_q_net.py  impala_net.py
model/templates/: __init__.py  activations.py  auto_encoder.py  conv_net.py  mlp.py  resnet.py
offline/: astar_collect.py  astar_solver.py  offline_dqn.py
online/: dqn.py  dqn_model.py  dqn_policy.py  space.py  train_dqn.py
pretext/: README.md  collect_data.py  cvae.py  pretext_dataset.py  pretext_eval.py  pretext_train.py
pretext/data/: pretext_vae.pt
ray_uav/pretext/: README.md  cvae.py  pretext_dataset.npy  pretext_dataset.py  pretext_train.py
rl/: train_dqn.py
rl/offline/: offline_dqn.py
rl/online/: online_dqn.py  online_dqn_load.py
src/uav_rl/configs/: atari-sac.yaml  cartpole-sac.yaml  uav-dqn.yaml  uav-ppo.yaml  uav-vec-dqn.yaml
src/uav_rl/data/: astar_actor.py  astar_collect.py
src/uav_rl/eval/: eval_uav.py  eval_uav_vec.py
src/uav_rl/models/: dqn_model.py  lpp2d_mlp.py  lpp2d_model.py  ppo_model.py  sac_model.py  simba_encoder.py
src/uav_rl/rl/: runner.py  runner_ckpt.py
src/uav_rl/uav_envs/: __init__.py  uav_env_v7.py
tests/: collect_uav_data.py  import_env.py  test_action_space.py  test_custom_list.py  test_env_time_cost.py  test_get.py  test_gym_atari.py  test_load_model.py  test_slices.py  test_space.py
uav_envs/: __init__.py  astar_actor.py  uav_env_v1.py  uav_env_v2.py  uav_env_v3.py  uav_env_v5.py  uav_env_v6.py  uav_env_v7.py
uav_envs/utils/: lidar.py
uav_envs/wrappers/: action_wrapper.py  pretext_wrapper.py
uav_rl/configs/: atari-dqn.yaml  atari-ppo.yaml  atari-sac.yaml  cartpole-dqn.yaml  cartpole-ppo.yaml  cartpole-sac.yaml
uav_rl/configs/algo/: dqn_config.yaml
uav_rl/configs/env/: env_online_config.yaml
uav_rl/data/: astar_collect.py
uav_rl/models/: dqn_model.py  model_constructor.py  ppo_model.py  sac_model.py  uav_encoder.py
uav_rl/models/modules/: conv_encoder.py
uav_rl/models/pretext/: pretext_train.py
uav_rl/pretext/: README.md  pretext_eval.py
uav_rl/rl/: dqn.py  ppo.py  runner.py  sac.py
(+14 files in other folders)
