[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ray_uav*"]

[project]
name = "ray_uav"
version = "0.1.0"
authors = [
    { name = "0Pinky0", email = "lpinkyl@126.com" },
]
license = { text = "MIT License" }
keywords = ["Reinforcement Learning", "RL", "AI"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
]
description = "Self constructed environments based on Jax."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ray[rllib]",
    "torch",
    "gymnasium",
    "pygame",
    "opencv-python",
]

[project.optional-dependencies]
testing = [
    "pytest ==7.1.3",
    "scipy >= 1.7.3",
    "dill>=0.3.7",
]
