[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ray_uav*"]

[project]
name = "ray_uav"
version = "0.1.0"
authors = [
    { name = "0Pinky0", email = "lpinkyl@126.com" },
]
license = { text = "MIT License" }
keywords = ["Reinforcement Learning", "RL", "AI"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
]
description = "Self constructed environments based on Jax."
readme = "README.md"
requires-python = ">=3.8, <=3.11"
dependencies = [
    "omegaconf",
    "opencv-python",
    "gputil",
    "ray==2.8.1",
    "ray[default]",
    "ray[train]",
    "ray[tune]",
    "ray[rllib]",
    "google-api-core==2.17.1",
    "google-auth==2.28.1",
    "google-auth-oauthlib==1.2.0",
    "google-pasta==0.2.0",
    "googleapis-common-protos==1.62.0",
    "gymnasium==0.28.1",
    "pygame>=2.1.3",
    "tensorboard",
    "torch",
    "torchaudio",
    "torchvision",
    "numpy<2.0",
    "matplotlib",
    "orjson",
]
